--- a/css/style.css
+++ b/css/style.css
@@ -27,23 +27,23 @@
 
 
 body {
-	background-color: var(--clr-light);
-	font-family: var(--ff-primary);
-	position: relative;
-	width: 100vw;
-	height: 100vh;
+    background-color: var(--clr-light);
+    font-family: var(--ff-primary);
+    position: relative;
+    width: 100vw;
+    height: 100vh;
 }
 
 
 a{
-	text-decoration: none;
-	color: black;
+    text-decoration: none;
+    color: black;
 }
 
 h2 {
-	margin-top: 10px;
-	font-weight: var(--fw-bold);
-	color: var(--clr-accent);
+    margin-top: 10px;
+    font-weight: var(--fw-bold);
+    color: var(--clr-accent);
 }
 
 .hero {
@@ -54,7 +54,7 @@ h2 {
     background-color: var(--clr-white);
     max-width: 450px;
     margin: 0 auto;
-    border-radius: 50px;
+    border-radius: 1rem;
     padding: 30px 30px 45px 30px;
     box-shadow: 0px 2px 10px 2px var(--primary-shadow);
 
@@ -68,17 +68,49 @@ h2 {
     text-align: center;
 }
 
+.text p {
+    padding-inline: 2rem;
+}
+
 .qr-img > img {
-    border-radius: 50px;
+    border-radius: 1rem;
     width: 400px;
 }
 
 .attribution {
     text-align: center;
     position: absolute;
-    top: 97%;
+    top: 80%;
     left: 50%;
     transform: translateX(-235px);
     color: var(--clr-accent);
 }
 
+@media(max-width: 700px) {
+    .hero {
+        max-width: 350px;
+        padding-top: 1rem;
+        transform: translate(-175px, -250px);
+    }
+
+.text p {
+        padding-top: 1rem;
+}
+
+.text h2 {
+    padding-top: 1rem;
+}
+
+.qr-img > img {
+        border-radius: 0.875rem;
+        width: 325px;
+}
+
+.attribution {
+    text-align: center;
+    top: 90%;
+    left: 65%;
+    transform: translateX(-150px);
+}
+
+}
